syntax = "proto3";

message TensorShapeDef {
  repeated int64 dim = 1;
}
